@@ -1,3 +1,8 @@
+2005-11-15  Sam Steingold  <sds@gnu.org>
+
+	* modules/rawsock/rawsock.c (check_socket_domain)
+	(check_socket_protocol): added some woe32 constants
+
 2005-11-14  Sam Steingold  <sds@gnu.org>
 
 	* compiler.lisp (traverse-anode): use make-array/dotimes instead
